Overhaul styling. Add authentication checks. Remove unused code.
 * Only authentications are performed, not authorizations.

--- a/app/assets/templates/todo_items/show.jst.ejs
+++ b/app/assets/templates/todo_items/show.jst.ejs
@@ -5,6 +5,6 @@
 <span class="todo-item-body <%= completeClass %>">
   <%= model.escape("body") %>
 </span>
-<button class="completion-button">
+<button class="completion-button btn">
   <%= completionButtonBody %>
 </button>
