--- a/app/assets/stylesheets/styles.css
+++ b/app/assets/stylesheets/styles.css
@@ -8,15 +8,26 @@ ul {
   padding: 0px;
 }
 
-.container {
-  width: 400px;
+.btn {
+  padding:3px;
+  font-size: 14px;
+  font-weight: normal;
+  text-align: center;
+  white-space: nowrap;
+  vertical-align: middle;
+  cursor: pointer;
+  border: 1px solid transparent;
+  border-radius: 4px;
 }
 
 .todo-item {
   width: 100%;
-  height: 20px;
   border: 2px solid gray;
+  height:30px;
+  border-radius: 4px;
   background-color: rgb(245, 245, 245);
+  vertical-align: middle;
+  cursor: default;
 }
 
 .todo-item:hover {
@@ -28,15 +39,16 @@ ul {
 }
 
 .todo-item-body {
-  width:50%;
+  border-right: 100px;
 }
 
 .completed-item {
   text-decoration: line-through;
+  color: gray;
 }
 
 .completion-button {
-  float: right;
+  float:right;
 }
 
 .hidden {
