--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,7 +9,7 @@
 <body>
   <div>
     <% if logged_in? %>
-      <%= button_to "Log Out", session_url, :method => :delete %>
+      <%= button_to "Log Out", session_url, :method => :delete, :class => "btn" %>
       User: <%= current_user.username %>
     <% else %>
       No one logged in.
