--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -2,6 +2,7 @@
   <input type="hidden" name="authenticity_token" value="<%= form_authenticity_token %>">
 
   <fieldset>
+    <span>Already a user? <%= link_to "Sign In", new_session_url %></span>
     <div class="form-group">
       <label for="user_username">Username</label>
       <input type="text" id="user_username" name="user[username]" value="<%= @user.username %>">
@@ -11,6 +12,6 @@
       <input type="password" id="user_password" name="user[password]">
     </div>
 
-    <input type="submit" value="Sign Up!">
+    <input class="btn" type="submit" value="Sign Up!">
   </fieldset>
 </form>
